--- a/modules/sns/default/0.1/facets.yaml
+++ b/modules/sns/default/0.1/facets.yaml
@@ -64,6 +64,8 @@ spec:
               type: array
               title: Events
               description: A list of all S3 events you want to subscribe to
+              x-ui-array-input-validation:
+                error: "Invalid event. Please enter a valid event."
               items:
                 type: string
               x-ui-override-disable: true
