--- a/modules/kubernetes_cluster/azure_aks/0.2/facets.yaml
+++ b/modules/kubernetes_cluster/azure_aks/0.2/facets.yaml
@@ -332,18 +332,18 @@ outputs:
         version: 2.8.0
         attributes:
           kubernetes:
-            host: attributes.auth_host
+            host: attributes.cluster_endpoint
             client_certificate: attributes.client_certificate
             client_key: attributes.client_key
-            cluster_ca_certificate: attributes.auth_cluster_ca_certificate
+            cluster_ca_certificate: attributes.cluster_ca_certificate
       kubernetes-alpha:
         source: hashicorp/kubernetes-alpha
         version: 0.6.0
         attributes:
-          host: attributes.auth_host
+          host: attributes.cluster_endpoint
           client_certificate: attributes.client_certificate
           client_key: attributes.client_key
-          cluster_ca_certificate: attributes.auth_cluster_ca_certificate
+          cluster_ca_certificate: attributes.cluster_ca_certificate
 sample:
   kind: kubernetes_cluster
   flavor: azure_aks_cluster
