--- a/modules/kubernetes_cluster/eks/1.0/facets.yaml
+++ b/modules/kubernetes_cluster/eks/1.0/facets.yaml
@@ -1,20 +1,21 @@
 intent: kubernetes_cluster
-flavor: aws_eks_demo
+flavor: eks
 alias-flavors:
-- default
-version: '0.3'
+  - default
+version: "1.0"
 clouds:
-- aws
+  - aws
 title: EKS Cluster with Auto Mode support
-description: A Kubernetes EKS cluster module with auto mode enabled by default and
+description:
+  A Kubernetes EKS cluster module with auto mode enabled by default and
   all necessary configurations preset.
 allow_skipping_module_on_selective_release: false
 spec:
   type: object
   x-ui-order:
-  - cluster
-  - secret_copier
-  - tags
+    - cluster
+    - secret_copier
+    - tags
   properties:
     secret_copier:
       type: object
@@ -43,7 +44,7 @@ spec:
           type: string
           title: Kubernetes Version
           description: Version of Kubernetes to use for the EKS cluster.
-          default: '1.31'
+          default: "1.31"
         cluster_endpoint_public_access:
           type: boolean
           title: Cluster Endpoint Public Access
@@ -59,18 +60,20 @@ spec:
         cluster_endpoint_public_access_cidrs:
           type: array
           title: Cluster Endpoint Public Access CIDRs
-          description: List of CIDR blocks which can access the Amazon EKS public
+          description:
+            List of CIDR blocks which can access the Amazon EKS public
             API server endpoint.
           default:
-          - 0.0.0.0/0
+            - 0.0.0.0/0
           x-ui-overrides-only: true
         cluster_endpoint_private_access_cidrs:
           type: array
           title: Cluster Endpoint Private Access CIDRs
-          description: List of CIDR blocks which can access the Amazon EKS private
+          description:
+            List of CIDR blocks which can access the Amazon EKS private
             API server endpoint.
           default:
-          - 0.0.0.0/0
+            - 0.0.0.0/0
           x-ui-overrides-only: true
         cloudwatch_log_group_retention_in_days:
           type: number
@@ -82,9 +85,9 @@ spec:
           title: Cluster Enabled Log Types
           description: List of log types to enable for the EKS cluster.
           default:
-          - api
-          - audit
-          - authenticator
+            - api
+            - audit
+            - authenticator
           x-ui-overrides-only: true
         enable_cluster_encryption:
           type: boolean
@@ -98,8 +101,8 @@ spec:
           default: Delete
           x-ui-overrides-only: true
           enum:
-          - Delete
-          - Retain
+            - Delete
+            - Retain
         kms:
           type: object
           title: KMS
@@ -130,9 +133,9 @@ spec:
               x-ui-visible-if:
                 field: spec.cluster.kms_keys.enable_rotation
                 values:
-                - true
+                  - true
       required:
-      - kubernetes_version
+        - kubernetes_version
     tags:
       type: object
       title: Tags
@@ -140,69 +143,78 @@ spec:
       x-ui-toggle: false
       x-ui-yaml-editor: true
   required:
-  - cluster
+    - cluster
 inputs:
   network_details:
-    type: '@facets/aws-vpc-details'
+    type: "@facets/aws-vpc-details"
     displayName: Network
     default:
       resource_type: network
       resource_name: default
   cloud_account:
-    type: '@outputs/cloud_account'
+    type: "@outputs/cloud_account"
     displayName: Cloud Account
     description: The AWS Cloud Account where the EKS cluster will be created
     optional: false
     providers:
-    - aws
-    - aws4
-    - aws5
-    - aws593
+      - aws
+      - aws4
+      - aws5
+      - aws593
 outputs:
   attributes.k8s_details:
-    type: '@outputs/aws_eks'
+    type: "@outputs/aws_eks"
     title: Kubernetes Cluster Output
-    description: The output for the Kubernetes cluster
+    description: The output for the Kubernetes cluster with exec plugin support
     providers:
       kubernetes:
         source: hashicorp/kubernetes
-        version: 2.17.0
+        version: 2.38.0
         attributes:
-          host: cluster.auth.host
-          token: cluster.auth.token
-          cluster_ca_certificate: cluster.auth.cluster_ca_certificate
+          host: "@facets-ref/cluster.auth.host"
+          cluster_ca_certificate: "@facets-ref/cluster.auth.cluster_ca_certificate"
+          exec:
+            api_version: "client.authentication.k8s.io/v1beta1"
+            command: "aws"
+            args: ["eks", "get-token", "--cluster-name", "@facets-ref/cluster.name"]
       helm:
         source: hashicorp/helm
-        version: 2.8.0
+        version: 3.0.2
         attributes:
           kubernetes:
-            host: cluster.auth.host
-            token: cluster.auth.token
-            cluster_ca_certificate: cluster.auth.cluster_ca_certificate
+            host: "@facets-ref/cluster.auth.host"
+            cluster_ca_certificate: "@facets-ref/cluster.auth.cluster_ca_certificate"
+            exec:
+              api_version: "client.authentication.k8s.io/v1beta1"
+              command: "aws"
+              args: ["eks", "get-token", "--cluster-name", "@facets-ref/cluster.name"]
       kubernetes-alpha:
         source: hashicorp/kubernetes-alpha
         version: 0.6.0
         attributes:
-          host: cluster.auth.host
-          cluster_ca_certificate: cluster.auth.cluster_ca_certificate
-          token: cluster.auth.token
+          host: "@facets-ref/cluster.auth.host"
+          cluster_ca_certificate: "@facets-ref/cluster.auth.cluster_ca_certificate"
+          exec:
+            api_version: "client.authentication.k8s.io/v1beta1"
+            command: "aws"
+            args: ["eks", "get-token", "--cluster-name", "@facets-ref/cluster.name"]
 sample:
   kind: kubernetes_cluster
-  flavor: aws_eks_demo
+  flavor: eks
   alias-flavors:
-  - default
-  version: '0.3'
+    - default
+  version: "1.0"
   metadata:
     name: eks-cluster
   spec:
     cluster:
-      kubernetes_version: '1.31'
+      kubernetes_version: "1.31"
       cluster_endpoint_public_access: true
       cluster_endpoint_private_access: false
       cluster_endpoint_public_access_cidrs:
-      - 0.0.0.0/0
+        - 0.0.0.0/0
       cluster_endpoint_private_access_cidrs:
-      - 0.0.0.0/0
+        - 0.0.0.0/0
     secret_copier:
       enabled: true
       values:
