--- a/modules/helm/k8s/0.1/facets.yaml
+++ b/modules/helm/k8s/0.1/facets.yaml
@@ -74,6 +74,9 @@ spec:
       x-ui-yaml-editor: true
       x-ui-placeholder: Enter values in YAML format
   required: [ "helm", "values" ]
+info:
+  isKubernetes : true
+  critical: true
 sample:
   $schema: 'https://facets-cloud.github.io/facets-schemas/schemas/helm/helm.schema.json'
   kind: helm
